--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "browser-sync": "^2.9.7",
     "browserify": "^11.2.0",
     "combined-stream": "^1.0.5",
+    "connect": "^3.4.0",
+    "gulp-cache": "^0.3.0",
     "gulp-changed": "^1.3.0",
+    "gulp-connect": "^2.2.0",
     "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.3.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
@@ -22,7 +26,9 @@
     "gulp-sass": "^2.0.4",
     "gulp-uglify": "^1.4.1",
     "handlebars": "^4.0.3",
+    "merge-stream": "^1.0.0",
     "mkpath": "^0.1.0",
+    "node-sass-import-once": "^1.2.0",
     "query-string": "^2.4.1",
     "through": "^2.3.8",
     "through2": "^2.0.0",
