--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "browserify": "^11.2.0",
     "combined-stream": "^1.0.5",
     "connect": "^3.4.0",
+    "gulp-awspublish": "^3.0.1",
     "gulp-cache": "^0.3.0",
     "gulp-changed": "^1.3.0",
     "gulp-connect": "^2.2.0",
+    "gulp-csso": "^1.0.1",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
+    "gulp-insert": "^0.5.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
@@ -27,9 +30,12 @@
     "gulp-uglify": "^1.4.1",
     "handlebars": "^4.0.3",
     "merge-stream": "^1.0.0",
+    "minimist": "^1.2.0",
     "mkpath": "^0.1.0",
     "node-sass-import-once": "^1.2.0",
     "query-string": "^2.4.1",
+    "rimraf": "^2.4.3",
+    "sprintf": "^0.1.5",
     "through": "^2.3.8",
     "through2": "^2.0.0",
     "uglify": "^0.1.5",
