--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "uglify": "^0.1.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.4.0"
+    "watchify": "^3.4.0",
+    "node-sass": "3.3.2"
   }
 }
