--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^6.0.1",
-    "gulp-sass": "^2.0.4",
+    "gulp-sass": "2.0.4",
     "gulp-uglify": "^1.4.1",
     "handlebars": "^4.0.3",
     "merge-stream": "^1.0.0",
