--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com/lucify/lucify-build-tools.git"
+    "url": "git+https://github.com/lucified/lucify-build-tools.git"
   },
   "dependencies": {
     "babelify": "^6.3.0",
