--- a/package.json
+++ b/package.json
@@ -14,13 +14,10 @@
   },
   "dependencies": {
     "babelify": "^6.3.0",
-    "browser-sync": "^2.9.7",
+    "browser-sync": "2.10.1",
     "browserify": "^11.2.0",
     "combined-stream": "^1.0.5",
-    "connect": "^3.4.0",
     "gulp-awspublish": "^3.0.1",
-    "gulp-cache": "^0.3.0",
-    "gulp-changed": "^1.3.0",
     "gulp-connect": "^2.2.0",
     "gulp-csso": "^1.0.1",
     "gulp-if": "^2.0.0",
@@ -35,17 +32,14 @@
     "handlebars": "^4.0.3",
     "merge-stream": "^1.0.0",
     "minimist": "^1.2.0",
-    "mkpath": "^0.1.0",
     "node-sass-import-once": "^1.2.0",
     "query-string": "^2.4.1",
     "rimraf": "^2.4.3",
     "sprintf": "^0.1.5",
     "through": "^2.3.8",
     "through2": "^2.0.0",
-    "uglify": "^0.1.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0",
-    "node-sass": "3.3.2"
   }
 }
