--- a/package.json
+++ b/package.json
@@ -33,13 +33,12 @@
     "merge-stream": "^1.0.0",
     "minimist": "^1.2.0",
     "node-sass-import-once": "^1.2.0",
-    "query-string": "^2.4.1",
     "rimraf": "^2.4.3",
     "sprintf": "^0.1.5",
     "through": "^2.3.8",
     "through2": "^2.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.4.0",
+    "watchify": "^3.4.0"
   }
 }
