--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browserify": "^11.2.0",
     "combined-stream": "^1.0.5",
     "gulp-awspublish": "^3.0.1",
+    "gulp-cache": "^0.4.1",
     "gulp-connect": "^2.2.0",
     "gulp-csso": "^1.0.1",
     "gulp-if": "^2.0.0",
