--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "combined-stream": "^1.0.5",
     "gulp-awspublish": "^3.0.1",
     "gulp-cache": "^0.4.1",
+    "gulp-changed": "^1.3.0",
     "gulp-connect": "^2.2.0",
     "gulp-csso": "^1.0.1",
     "gulp-if": "^2.0.0",
