--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sprintf": "^0.1.5",
     "through": "^2.3.8",
     "through2": "^2.0.0",
+    "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0"
