--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lucified/lucify-build-tools.git"
+    "url": "https://github.com/lucified/lucify-build-tools.git"
   },
   "dependencies": {
     "babelify": "^6.3.0",
