--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tools for building Lucify projects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec --timeout 20000"
   },
   "license": "MIT",
   "repository": {
@@ -40,7 +40,17 @@
     "through2": "^2.0.0",
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
+    "vinyl-fs": "^2.3.1",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0"
+  },
+  "devDependencies": {
+    "aws-sdk": "^2.2.32",
+    "chai": "^3.4.1",
+    "event-stream": "^3.3.2",
+    "gulp-debug": "^2.1.2",
+    "gulp-util": "^3.0.7",
+    "lodash": "^4.0.0",
+    "mocha": "^2.3.4"
   }
 }
