--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "lucify-build-tools",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "Tools for building Lucify projects",
   "main": "index.js",
-  "engines" : { "node" : ">=4.0.0" },
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "scripts": {
     "test": "mocha --reporter spec --timeout 20000"
   },
