--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "devDependencies": {
     "aws-sdk": "^2.2.32",
     "chai": "^3.4.1",
-    "event-stream": "^3.3.2",
+    "event-stream": "3.3.4",
     "gulp-debug": "^2.1.2",
     "gulp-util": "^3.0.7",
     "lodash": "^4.0.0",
